<resources>
    <string name="app_name">Data Structure Visualizer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save">Save</string>
    <string name="file_action">file_action</string>
    <string name="bst_rbt_avl_overview_tree_body"><![CDATA[Trees are non-linear data structures which store data in nodes, allowing for efficient insert, update, and search inquiries. Some of these structures follow a particular ordering property wherein given a node n all the left descendants will be < n < all right descendants. Though not all trees will follow this property, the ones covered in this application will.]]></string>
    <string name="bst_overview_bst_body">In binary search trees, each node can have a maximum of two children, giving binary search trees their name. Note that all trees are not binary trees, some can have more than two children such as a B+ tree. \n\nThe root node (node 1) is the first node of a tree, the parent of this node is null. \nThe root node of a tree is the parent of its left and right children (nodes 2 and 3). \nThe links that connect a parent to its children are called edges. \nThe nodes that have no children are leaf nodes (nodes 4, 5, and 6)</string>
    <string name="bst_overview_definitions_body_full">Full: every node has either zero or two children.\n</string>
    <string name="bst_overview_definitions_body_complete">Complete: every level in the tree is fully filled except for the last level, which should be filled from left to right.</string>
    <string name="bst_overview_definitions_body_perfect">Perfect: the tree is both full and complete, this tree will have 2^(n-1) nodes.</string>
    <string name="bst_code_insertion">The new node will be inserted in place of a null node in the current tree. Start at the root and check the relationship between the new node and the root node. If the new node is less than then root node go to the left child, otherwise go to the right child. Iteratively continue this process until a null node is reached. Insert the new node in place of the null node reached.</string>
    <string name="bst_code_deletion1">There are three cases you may encounter when deleting a node from a binary search tree.</string>
    <string name="bst_code_deletion2">Case 1: The node to be deleted is a leaf node</string>
    <string name="bst_code_deletion3">Simply remove the node from the tree.</string>
    <string name="bst_code_deletion4">Case 2: The node to be deleted has one child.</string>
    <string name="bst_code_deletion5">Replace the value of the node to be deleted with the value from the child node. \n\nDelete the child node.</string>
    <string name="bst_code_deletion6">Case 3: The node to be deleted has two children.</string>
    <string name="bst_code_deletion7">Find the in-order successor of the node to be delete, this will be the minimum value of the right subtree of the node to be deleted. \n\nReplace the node with this value. \n\nDelete the node of the in-order successor.</string>
    <string name="code_traversals_overview">Traversals iterate over the tree in a certain order, performing an action on each node. The actions that are performed during traversals include adding nodes to a tree, performing an update, or, in the case of this visualizer, performing an animation.</string>
    <string name="code_traversals_preOrder_overview">A pre-order traversal is a depth first traversal which performs an action on a node then explores its children from left to right. This is typically done recursively, though it can be done with a stack.</string>
    <string name="code_traversals_preOrder_complexity">Time Complexity: O(n)</string>
    <string name="code_traversals_preOrder_algorithm1">Algorithm:</string>
    <string name="code_traversals_preOrder_algorithm2">Call the recursive traversal method with the Tree\'s root node.</string>
    <string name="code_traversals_preOrder_algorithm3">Recursive traversal method:</string>
    <string name="code_traversals_preOrder_algorithm4"><![CDATA[Return if the input node is null (base case). \n\nPrint the value of the node \n\nCall the recursive traversal method with the input node\'s left child \n\nCall the recursive traversal method with the input node\'s right child \n\nreturn]]></string>
    <string name="code_traversals_postOrder_overview">A post-order traversal is a depth first traversal which explores a node’s children from left to right then performs an action on it. This is typically done recursively, though it can be done with a stack.</string>
    <string name="code_traversals_postOrder_complexity">Time Complexity: O(n)</string>
    <string name="code_traversals_postOrder_algorithm1">Algorithm:</string>
    <string name="code_traversals_postOrder_algorithm2">Call the traversal method with the Tree\'s root.</string>
    <string name="code_traversals_postOrder_algorithm3">Recursive traversal method:</string>
    <string name="algorithm">Algorithm:</string>
    <string name="graph_breadthfirst_overview">The breadth first pathfind is a simple search algorithm that produces a path between any inserted starting and destination nodes. This pathfind parses through all nodes adjacent to currently explored nodes until there are no more unexplored nodes left. \n\nTime Complexity: O(|E| + |V|) \n\nWhere E is the set of edges and V is the set of vertices. </string>
    <string name="graph_breadthfirst_algorithm1">The Breadth first described here requires that the user maintain a list of explored nodes and a queue of nodes to explore. The list of explored nodes is checked whenever a node is enqueued to prevent nodes from being explored more than once. The queue of nodes to explore is popped whenever the previous node has finished exploring. It contains all unexplored nodes which are adjacent to explored nodes, sorted (naturally) by time of insertion such that nodes which are inserted first are explored first. \n\nIt is also required that each node have a ‘previous’ field, which represents the previous node in the path. This is used to return the path after it is finished (note that deriving the path is not described here as it is fairly simple). </string>
    <string name="graph_breadthfirst_algorithm2">Set the previous value of the starting node to null. \n\nAdd the starting node to a queue. \n\nWhile the queue is non-empty: </string>
    <string name="graph_breadthfirst_algorithm3">Pop the node at the head of the queue. \n\nIf the popped Node has been explored, continue looping. \n\nAdd the popped node to the list of explored nodes. \n\nFor each edge that begins in the popped node: </string>
    <string name="graph_breadthfirst_algorithm4">If the popped node is the desired destination node, terminate pathfinding and return the path of the current node. \n\nOtherwise: </string>
    <string name="graph_breadthfirst_algorithm5">Assign the popped node as the previous node of the destination node. \n\nAdd the destination node to the queue. </string>
    <string name="graph_dijkstra_overview">The Dijkstra pathfind is a greedy best first search algorithm that produces a minimal cost path between any inserted starting and destination nodes. \n\nTime Complexity: O(|E| * log(|V|)) \n\nWhere E is the set of edges and V is the set of vertices. </string>
    <string name="graph_dijkstra_algorithm1">The Dijkstra pathfinding algorithm described here requires that the user maintain a list of explored nodes and apriority queue of nodes to explore. The list of explored nodes is checked whenever a node is enqueued to prevent nodes from being explored more than once. The priority queue of nodes to explore is popped whenever the previous node has finished exploring. It sorts nodes in terms of the cost of the path taken to reach them such that the node with the cheapest existing path is explored first. \n\nIt is also required that each node have a ‘previous’ field, which represents the previous node in the path. This is used to return the path after it is finished (note that deriving the path is not described here as it is fairly simple). </string>
    <string name="graph_dijkstra_algorithm2">Set the previous value of the starting node to null. \n\nAssign the cost of each node to infinity. \n\nAdd the starting node to a priority-queue with cost 0. \n\nWhile the priority-queue is non-empty: </string>
    <string name="graph_dijkstra_algorithm3">Pop the node at the head of the priority-queue. \n\nIf the popped node is the desired destination node, terminate pathfinding and return the path of the current node. \n\nIf the popped Node has been explored, continue looping. \n\nAdd the popped node to the list of explored nodes. \n\nFor each edge that begins in the popped node: </string>
    <string name="graph_dijkstra_algorithm4">Add the destination node of the edge to the priority-queue. The destination node will be assigned a cost equal to the cost of the current node plus the weight of the edge. \n\nIf the above cost is lower than the previous cost, assign the popped node as the previous node of the destination node. </string>
    <string name="graph_prim_overview">Prim’s algorithm is a greedy best first search that constructs a minimum spanning tree starting from an inputed Node. \n\nTime Complexity: O(|V|²) \n\nWhere V is the set of vertices. Note that the implementation provided is a simple one, and there are other implementations with lower time complexity. </string>
    <string name="graph_prim_algorithm1">The version of Prim’s algorithm described here requires that the user maintain a list of explored nodes and priority queue of edges to explore. The list of explored nodes is checked whenever a node is enqueued to prevent nodes from being explored more than once. The priority queue of edges to explore contains all edges adjacent to explored nodes and is sorted such that lower cost edges are explored first.</string>
    <string name="graph_prim_algorithm2">While the priority-queue is non-empty:</string>
    <string name="graph_prim_algorithm3">Pop the edge at the head of the priority-queue. \n\nIf the node at the destination of the popped edge has been explored, continue looping. \n\nAdd the destination node to the list of explored nodes. \n\nFor each edge that begins in the destination node: </string>
    <string name="graph_prim_algorithm4">Add the edge to the priority queue. Its cost will be assigned to its weight.</string>
    <string name="graph_kruskal_algorithm1">The version of Kruskal’s algorithm described here requires that the user maintain a list of trees and a priority queue of edges to explore. The list of trees tracks the minimum spanning trees. The priority queue of edges to explore contains all edges and is sorted such that lower cost edges are explored first.</string>
    <string name="graph_kruskal_algorithm2">Add all Nodes to their own trees. \n\nWhile the priority-queue is non-empty: </string>
    <string name="graph_kruskal_algorithm3">Pop the edge at the head of the priority-queue. \n\nIf the node at the destination of the edge is within the same tree as the node at the start of the edge, continue looping. \n\nAdd all nodes of the tree containing of the destination node to the tree containing the starting node. \n\nDelete the tree that contained the starting node. </string>
    <string name="graph_kruskal_overview">Kruskal’s algorithm finds the minimum spanning forest of a graph by combining the nodes connected by the cheapest edges into trees. \n\nTime Complexity: O(|E| * log |V|) \n\nWhere E is the set of edges and V is the set of vertices.</string>
</resources>