<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Code"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Breadth-First Search"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_breadthfirst_overview"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_breadthfirst_algorithm1"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_breadthfirst_algorithm2"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_breadthfirst_algorithm3"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_breadthfirst_algorithm4"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_breadthfirst_algorithm5"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dijkstra's Shortest Path"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_dijkstra_overview"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_dijkstra_algorithm1"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_dijkstra_algorithm2"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_dijkstra_algorithm3"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_dijkstra_algorithm4"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prim's Algorithm"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_prim_overview"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_prim_algorithm1"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_prim_algorithm2"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_prim_algorithm3"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_prim_algorithm4"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kruskal's Algorithm"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_kruskal_overview"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_kruskal_algorithm1"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_kruskal_algorithm2"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_kruskal_algorithm3"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_body"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:textStyle="normal"
            />


        <Button
            android:id="@+id/button_visualize"
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visualize"
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            />
    </LinearLayout>

</ScrollView>